Fixng the gap between the rows and from the left Div as well

--- a/blocks/veiculos-highlight/veiculos-highlight.css
+++ b/blocks/veiculos-highlight/veiculos-highlight.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
-    gap: 5rem;
+    gap: 0;
 }
 
 .veiculos-highlight.block .highlighted-vehicle > div {
@@ -125,6 +125,7 @@
         display: grid;
         grid-template-columns: repeat(3, 33%);
         grid-gap: 10px;
+        height: 25rem;
     }
 }
 
